fix margins on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,7 @@ footer p {
 
 @media (max-width: 570px) {
     body {
-        margin: 10px 20px 0;
+        margin: 10px 0;
     }
     .logo {
         left: calc(50% - 50px)
@@ -321,6 +321,9 @@ footer p {
     .feature-image {
         height: 130%;
         width: 130%;
+    }
+    .flowover {
+        overflow: hidden;
     }
     section.welcome {
         padding: 75px 30px 100px; 
